Extensions TCP socket API. Do not error out on EOF

On receiving 0 byte from the network,
network::TCPConnectedSocket::ShutdownReceive closes the producer side of the
receive pipe. When this happens, MojoDataPump::ReceiveMore
will get result != MOJO_RESULT_OK and invoke the read callback with
net::ERR_FAILED.

This broke a CrOS app that uses the TCP socket API.

The fix is to not error out when mojo pipe is closed, and consider all read
errors to be connection close.

BUG=877167

Change-Id: I9ec8eb58110b3f255d8ef380f111eec278797fcb
Reviewed-on: https://chromium-review.googlesource.com/1187076
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Commit-Queue: Helen Li <xunjieli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585995}
Former-commit-id: 37e44dbf60a0fb7bd98acb9be976209c51ab4561